Improved logging of BHiveLocatorImpl#getNamedHive
Also some minor other changes.

Request: CT_BDEPLOY-23
Change-Id: Id2a7336dfe510a1aed388de10f2ef3cb51e0d435